[lab4] correzioni report

--- a/reportCG.tex
+++ b/reportCG.tex
@@ -104,16 +104,18 @@ Nella funzione \texttt{modifyModelMatrix()} applico le trasformazioni di traslaz
 \paragraph{Punto 1.}
 Per generare le hard shadow, creo, per mezzo della funzione \texttt{Ray()}, nella funzione \texttt{TraceRay()}, un raggio che parte dal punto d'intersezione \texttt{point} e va in direzione (\texttt{dirToLight}) della luce \texttt{pointOnLight}. Lancio tale raggio tramite la funzione \texttt{CastRay()}.\\
 Successivamente aggiungo il raggio, come shadow ray, al ray tree, attraverso la funzione \texttt{AddShadowSegment()}, così da essere visualizzato durante la modalità di debug.\\
-Infine, controllo se l'oggetto colpito dal raggio è una sorgente luminosa: se è così, calcolo e aggiungo il suo contributo luminoso al colore di quel punto, altrimenti quella luce non contribuisce alla luminosità di questo. Per eseguire tale controllo, dato il punto luce \texttt{pointOnLight} con coordinate $(x, y, z)$, verifico se le coordinate del punto colpito dallo shadow ray sono comprese, rispettivamente, negli intervalli $[x - 0.00001, x + 0.00001]$, $[y - 0.00001, y + 0.00001]$ e $[z - 0.00001, z + 0.00001]$.
+Infine, controllo se l'oggetto colpito dal raggio è una sorgente luminosa: se è così, calcolo e aggiungo il suo contributo luminoso al colore di quel punto, altrimenti quella luce non contribuirà alla sua luminosità. Per eseguire tale controllo, dato il punto luce \texttt{pointOnLight} con coordinate $(x, y, z)$, verifico se le coordinate del punto colpito dallo shadow ray sono comprese, rispettivamente, negli intervalli $[x - 0.00001, x + 0.00001]$, $[y - 0.00001, y + 0.00001]$ e $[z - 0.00001, z + 0.00001]$.
 
 \paragraph{Punto 2.}
 Per gestire i reflection ray, se la superficie colpita è riflettente, creo, nella funzione \texttt{TraceRay()}, per mezzo di una chiamata ricorsiva alla stessa, il raggio riflesso, che parte dal punto d'intersezione \texttt{point}.\\
-Quando invoco ricorsivamente \texttt{TraceRay()}, passo il valore della variabile \texttt{bounce\_count} decrementato di uno. Per verificare se la superficie colpita è riflettente, controllo se la variabile \texttt{reflectiveColor}, riferita all'oggetto, ha almeno un valore ($r$, $g$ o $b$) maggiore di zero. Siano $\vec{v}$ la direzione del raggio incidente e $\vec{n}$ la direzione normale alla superficie nel punto d'intersezione, per calcolare la direzione del raggio riflesso $\overrightarrow{r_v}$, utilizzo la formula:
+Quando invoco ricorsivamente \texttt{TraceRay()}, passo il valore della variabile \texttt{bounce\_count} decrementato di uno. Per verificare se la superficie colpita è riflettente, controllo se la variabile \texttt{reflectiveColor}, riferita all'oggetto, ha almeno un valore (tra $R$, $G$ e $B$) maggiore di zero. Siano $\vec{v}$ la direzione del raggio incidente e $\vec{n}$ la direzione normale alla superficie nel punto d'intersezione, per calcolare la direzione del raggio riflesso $\overrightarrow{r_v}$, utilizzo la formula:
 \[ \overrightarrow{r_v} = \vec{v} - 2 (\vec{n} \cdot \vec{v}) \vec{n} \]
-Infine, aggiungo il contributo riflesso al colore del punto d'intersezione, differenziando tra i due tipi di sfera. Se si tratta della sfera grande bianca, il contributo corrisponde al valore di ritorno della chiamata ricorsiva a \texttt{TraceRay()} (i.e. riflette esattamente il colore dell'ambiente esterno). Se si tratta della sfera piccola rossa, invece, corrisponde al prodotto della media dei valori $r$, $g$ e $b$ (quindi nell'intervallo $[0, 1]$) di tale contributo per la variabile \texttt{reflectiveColor}: in questo modo, a un valore $rgb$ basso, e rispettivamente alto, dell'ambiente esterno corrisponde un valore basso, e rispettivamente alto, del colore rosso della sfera (i.e. \texttt{reflectiveColor}).
+Infine, aggiungo il contributo riflesso al colore del punto d'intersezione, differenziando tra i due tipi di sfera.\\
+Se si tratta della sfera grande bianca, il contributo corrisponde al valore di ritorno della chiamata ricorsiva a \texttt{TraceRay()} (i.e. riflette esattamente il colore dell'ambiente esterno).\\
+Se si tratta della sfera piccola rossa, invece, corrisponde al prodotto della media dei valori $R$, $G$ e $B$ (quindi nell'intervallo $[0, 1]$) di tale contributo per la variabile \texttt{reflectiveColor}: in questo modo, a un valore $RGB$ basso, e rispettivamente alto, dell'ambiente esterno corrisponde un valore basso, e rispettivamente alto, del colore rosso della sfera (i.e. \texttt{reflectiveColor}).
 
 \paragraph{Punto 3.}
-Per gestire le soft shadow, nella funzione \texttt{TraceRay()}, dal punto d'intersezione \texttt{point}, lancio 128 raggi (shadow ray) verso punti casuali della risorsa luminosa area light e conto quanti di questi la raggiungono.\\
+Per gestire le soft shadow, nella funzione \texttt{TraceRay()}, lancio 128 raggi (shadow ray), dal punto d'intersezione \texttt{point}, verso punti casuali della risorsa luminosa area light e conto quanti di questi la raggiungono.\\
 Se tutti i raggi raggiungono la luce, allora il punto avrà il pieno contributo di tale luce al suo colore.\\
 Invece, se non tutti i raggi arrivano alla luce, vengono gestiti due casi: quello di ombra e quello di penombra. Se il numero di raggi è inferiore o pari a 15, il contributo della luce in quel punto è nullo: ci troviamo in una situazione di ombra piena. Se, invece, è superiore a 15 (ma almeno un raggio non arriva alla luce), si ha un contributo graduale in base al numero di raggi: più shadow ray arrivano alla luce, più quel punto sarà luminoso. Essendo il numero di raggi in questione, per esprimere la situazione di penombra, corrispondente a 113 ($= 128-15$), il contributo previsto per ognuno di questi raggi è pari a $0.009$ ($= 1/113$): tale contributo viene applicato per ciascun raggio, dal sedicesimo in poi, che arriva alla luce. Quindi, in questo caso, il contributo della luce in quel punto sarà pari al prodotto del numero di shadow ray che arrivano alla luce, decrementato di 15, per il singolo contributo.\\
 Ricapitolando, sia $n$ il numero di shadow ray che arrivano alla luce, il contributo di questa in quel punto, nei tre casi di ombra, penombra e luce piena, corrisponde a:
@@ -126,7 +128,7 @@ Ricapitolando, sia $n$ il numero di shadow ray che arrivano alla luce, il contri
 \]
 Sono giunto a ideare questa strategia seguendo alcuni passi.\\
 Inizialmente, ho lanciato 4 raggi dal punto d'intersezione: uno verso ciascuno dei quattro vertici della faccia della luce. Il risultato però era scadente, dal momento che l'ombra appariva divisa in fasce sovrapposte facilmente distinguibili. Aumentando il numero di raggi, l'ombra veniva resa in maniera più uniforme, ma comunque risultava divisa in fasce.\\
-Invece, lanciando i raggi in punti casuali della luce, l'ombra risultava uniforme, con un effetto più realistico di gradualità verso la luce. Infatti, in questo modo, a punti adiacenti nell'ombra non corrispondeva più necessariamente lo stesso livello d'intensità. Lanciando pochi raggi, però, l'ombra risultava puntiforme e quindi ancora poco realistica. Infine, aumentando il numero di raggi a 128, ho ottenuto un effetto di ombra diffusa, più attinente alla realtà.
+Invece, lanciando i raggi in punti casuali della luce, l'ombra risultava uniforme, con un effetto più realistico di gradualità verso la luce. Infatti, in questo modo, a punti adiacenti nell'ombra non corrispondeva più necessariamente lo stesso livello d'intensità. Lanciando pochi raggi, però, l'ombra risultava puntiforme e quindi ancora poco realistica. Infine, aumentando il numero di raggi a 128, ho ottenuto un effetto di ombra diffusa, più attinente alla realtà. Ho scelto di considerare in ombra anche i punti che hanno fino a 15 shadow ray che arrivano alla luce, così da estendere la zona d'ombra e ridurre quella di penombra.
 
 
 \begin{thebibliography}{90}
